// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiHorizontalRectSeries all props are rendered 1`] = `
<div
  style="width:100%;height:100%"
>
  <div>
    <div
      class="rv-xy-plot "
      style="width:600px;height:200px"
    >
      <svg
        class="rv-xy-plot__inner"
        height="200"
        width="600"
      >
        <g>
          <g
            class="rv-xy-plot__series rv-xy-plot__series--rect "
            transform="translate(2,2)"
          >
            <rect
              height="0"
              style="opacity:1;stroke:white;fill:#ff0000;stroke-width:1;rx:2px;ry:2px"
              width="0"
              x="0"
              y="196"
            />
            <rect
              height="196"
              style="opacity:1;stroke:white;fill:#ff0000;stroke-width:1;rx:2px;ry:2px"
              width="596"
              x="0"
              y="196"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`EuiHorizontalRectSeries is rendered 1`] = `
<div
  style="width: 100%; height: 100%;"
>
  <div
    aria-label="aria-label"
    class="testClass1 testClass2"
    data-test-subj="test subject string"
  >
    <div
      class="rv-xy-plot "
      style="width: 600px; height: 200px;"
    >
      <svg
        class="rv-xy-plot__inner"
        height="200"
        width="600"
      >
        <g>
          <g
            class="rv-xy-plot__series rv-xy-plot__series--rect "
            transform="translate(2,2)"
          >
            <rect
              height="0"
              style="opacity: 1; stroke: white; fill: #00B3A4; stroke-width: 1;"
              width="0"
              x="0"
              y="196"
            />
            <rect
              height="196"
              style="opacity: 1; stroke: white; fill: #00B3A4; stroke-width: 1;"
              width="596"
              x="0"
              y="196"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`EuiHorizontalRectSeries renders stacked bar chart 1`] = `
<div
  style="width:100%;height:100%"
>
  <div>
    <div
      class="rv-xy-plot "
      style="width:600px;height:200px"
    >
      <svg
        class="rv-xy-plot__inner"
        height="200"
        width="600"
      >
        <g>
          <g
            class="rv-xy-plot__series rv-xy-plot__series--rect "
            transform="translate(2,2)"
          >
            <rect
              height="56"
              style="opacity:1;stroke:white;fill:#ff0000;stroke-width:1;rx:2px;ry:2px"
              width="0"
              x="149"
              y="196"
            />
            <rect
              height="0"
              style="opacity:1;stroke:white;fill:#ff0000;stroke-width:1;rx:2px;ry:2px"
              width="298"
              x="149"
              y="196"
            />
          </g>
        </g>
        <g>
          <g
            class="rv-xy-plot__series rv-xy-plot__series--rect "
            transform="translate(2,2)"
          >
            <rect
              height="56"
              style="opacity:1;stroke:white;fill:#00ff00;stroke-width:1;rx:2px;ry:2px"
              width="0"
              x="149"
              y="140"
            />
            <rect
              height="196"
              style="opacity:1;stroke:white;fill:#00ff00;stroke-width:1;rx:2px;ry:2px"
              width="298"
              x="149"
              y="196"
            />
          </g>
        </g>
      </svg>
    </div>
  </div>
</div>
`;
